# Abdullah-Emre-zdere-karakter-animasyonu-projesi

./: CMakeLists.txt  README.md  SUBMISSION.md
Documentation/: REPORT_Abdullah_Emre_Ozdere.md
examples/: demo.cpp
include/: HumanMotion.h  motion_controller.h
missions/: human_animation_loop.lua
src/: HumanMotion.cpp  n8ro_motion_controller.cpp
